; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_sony-laptop.c_sony_pic_possible_resources.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_sony-laptop.c_sony_pic_possible_resources.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@AE_OK = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Evaluating _STA\0A\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"Unable to read status\0A\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"Device disabled\0A\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"Device enabled\0A\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"Evaluating %s\0A\00", align 1
@METHOD_NAME__PRS = common dso_local global i32 0, align 4
@sony_pic_read_possible_resource = common dso_local global i32 0, align 4
@spic_dev = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [23 x i8] c"Failure evaluating %s\0A\00", align 1
@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_device*)* @sony_pic_possible_resources to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sony_pic_possible_resources(%struct.acpi_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.acpi_device* %0, %struct.acpi_device** %3, align 8
  store i32 0, i32* %4, align 4
  %6 = load i32, i32* @AE_OK, align 4
  store i32 %6, i32* %5, align 4
  %7 = load %struct.acpi_device*, %struct.acpi_device** %3, align 8
  %8 = icmp ne %struct.acpi_device* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @EINVAL, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %2, align 4
  br label %50

12:                                               ; preds = %1
  %13 = call i32 (i8*, ...) @dprintk(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %14 = load %struct.acpi_device*, %struct.acpi_device** %3, align 8
  %15 = call i32 @acpi_bus_get_status(%struct.acpi_device* %14)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = call i32 (i8*, ...) @pr_warn(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  br label %48

20:                                               ; preds = %12
  %21 = load %struct.acpi_device*, %struct.acpi_device** %3, align 8
  %22 = getelementptr inbounds %struct.acpi_device, %struct.acpi_device* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %28, label %26

26:                                               ; preds = %20
  %27 = call i32 (i8*, ...) @dprintk(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0))
  br label %30

28:                                               ; preds = %20
  %29 = call i32 (i8*, ...) @dprintk(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  br label %30

30:                                               ; preds = %28, %26
  %31 = load i32, i32* @METHOD_NAME__PRS, align 4
  %32 = call i32 (i8*, ...) @dprintk(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i32 %31)
  %33 = load %struct.acpi_device*, %struct.acpi_device** %3, align 8
  %34 = getelementptr inbounds %struct.acpi_device, %struct.acpi_device* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @METHOD_NAME__PRS, align 4
  %37 = load i32, i32* @sony_pic_read_possible_resource, align 4
  %38 = call i32 @acpi_walk_resources(i32 %35, i32 %36, i32 %37, i32* @spic_dev)
  store i32 %38, i32* %5, align 4
  %39 = load i32, i32* %5, align 4
  %40 = call i64 @ACPI_FAILURE(i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %47

42:                                               ; preds = %30
  %43 = load i32, i32* @METHOD_NAME__PRS, align 4
  %44 = call i32 (i8*, ...) @pr_warn(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.5, i64 0, i64 0), i32 %43)
  %45 = load i32, i32* @ENODEV, align 4
  %46 = sub nsw i32 0, %45
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %42, %30
  br label %48

48:                                               ; preds = %47, %18
  %49 = load i32, i32* %4, align 4
  store i32 %49, i32* %2, align 4
  br label %50

50:                                               ; preds = %48, %9
  %51 = load i32, i32* %2, align 4
  ret i32 %51
}

declare dso_local i32 @dprintk(i8*, ...) #1

declare dso_local i32 @acpi_bus_get_status(%struct.acpi_device*) #1

declare dso_local i32 @pr_warn(i8*, ...) #1

declare dso_local i32 @acpi_walk_resources(i32, i32, i32, i32*) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
